[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.5",
    "email-validator>=2.2.0",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "httpx==0.25.2",
    "psycopg2-binary>=2.9.10",
    "python-ffmpeg-video-streaming>=0.1.16",
    "sqlalchemy>=2.0.40",
    "telethon>=1.30,<2.0"
]
